--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.mozilla.org/*"],
-      "js": ["background.js"]
+      "js": ["jquery-1.11.1.min.js","background.js"]
     }
   ]
 
